<resources>
    <string name="app_name">Prefetch Sample</string>
    <string name="action_settings">Settings</string>

    <string name="no_offline_provider">Please select one Offline Provider. You can select once in app session.</string>
    <string name="no_prefetch_for_dtg">This is Prefetch Settings. You can use only for Exo offline provider.</string>
    <string name="no_prefetch_for_options_menu">Please select one or more items by pressing long on the item below.</string>

    <string name="title_prepare_asset">Prepare</string>
    <string name="title_start_download">Start</string>
    <string name="title_play_local">Play</string>
    <string name="title_remove_asset">Remove</string>

    <string name="title_activity_play">Player</string>
    <string name="title_asset_status">Status</string>

    <string name="enable_prefetch">ExoProvider (Prefetch)</string>
    <string name="enable_dtg">DTGProvider</string>
    <string name="disable_prefetch">Disable Prefetch</string>
    <string name="message_enable_prefetch">Enable checkbox for prefetch.</string>

    <string name="settings_prefetch">Prefetch Settings</string>
    <string name="settings_prefetch_multiple">Prefetch Multiple Assets</string>
    <string name="maxItemCountInCache">Maximum item count in cache for prefetch</string>
    <string name="assetPrefetchSize">Prefetch size for asset(in MB)</string>
    <string name="removeCacheOnDestroy">Destroy prefetched items when app quits</string>
    <string name="apply_prefetch_settings">Apply Settings</string>
    <string name="prefetch_settings">Settings saved.</string>

    <string name="downloading_asset">Downloading Asset</string>
    <string name="download_paused_for_wifi" translatable="false">Downloads waiting for WiFi</string>
    <string name="download_paused_for_network" translatable="false">Downloads waiting for network</string>

</resources>
